<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:id="@+id/hotel_search_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        android:text= "@string/welcome_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/checkin_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_in_date"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_view"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>

    <DatePicker
        android:id="@+id/checkin_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/checkin_date_text_view"
        app:layout_constraintTop_toBottomOf="@+id/checkin_date_text_view"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/checkout_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_out_date"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/checkin_date_picker"
        app:layout_constraintStart_toStartOf="@+id/checkin_date_text_view"/>

    <DatePicker
        android:id="@+id/checkout_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/checkout_date_text_view"
        app:layout_constraintStart_toStartOf="@+id/checkin_date_text_view"/>

    <TextView
        android:id="@+id/guests_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_guest"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/checkout_date_picker"
        app:layout_constraintStart_toStartOf="@+id/checkin_date_text_view"
        android:gravity="start" />

    <EditText
        android:id="@+id/guests_number_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:hint="Guests Count"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/guests_text_view"
        app:layout_constraintBottom_toBottomOf="@+id/guests_text_view"
        app:layout_constraintTop_toTopOf="@+id/guests_text_view"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/check_search_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toStartOf="@+id/checkin_date_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guests_text_view"/>

    <Button
        android:id="@+id/check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_button"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_search_text_view"/>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toEndOf="@+id/check_button"
        app:layout_constraintTop_toTopOf="@+id/check_button"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>